DRT-98 - added Api/SourceControlController and SourceControlService.GetContributors to sync source control accounts - fixed jumping window when clicking on anchor - improved UX to check source control access

--- a/DailyReportWeb/Content/main.css
+++ b/DailyReportWeb/Content/main.css
@@ -110,6 +110,10 @@ div.disabled {
     -webkit-animation: spinw 1.2s infinite linear;
     -moz-animation: spinm 1.2s infinite linear;
 }
+
+a[ng-click] {
+    cursor: pointer;
+}
  
 @keyframes spin {
     from { transform: scale(1) rotate(0deg);}
